--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
         </span>
       </div>
 
+      <!-- Home Page -->
       <div class="page home">
         Hello!
       </div>
 
+      <!-- Pages -->
       <div class="page javascript">
 
         <h3 class="ui header">Source javascript Folder</h3>
@@ -49,7 +51,6 @@
 
         <button id="build-js" class="ui green button">Go</button>
       </div>
-
       <div class="page css">
 
 
@@ -80,7 +81,6 @@
 
 
       </div>
-
       <div class="page images">
 
 
@@ -112,7 +112,8 @@
 
       </div>
 
-      <div class="wrapper">
+      <!-- Loader -->
+      <div class="loader-wrapper">
           <div class="loader">
             <span>{</span>
             <span class="late">}</span>
@@ -124,6 +125,8 @@
           </span>
         </div>
 
+
+        <!-- Scripts -->
         <script>
           require('./renderer.js');
         </script>
