fonts + some css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Client Build Tool V0.0.1</title>
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
   </head>
 
@@ -43,7 +44,7 @@
 
           <button id="javascript-src-dir-trigger">Select folder</button>
 
-          <input id="javascript-src-dir none" type="file"/>
+          <input id="javascript-src-dir" type="file"/>
           <hr>
 
           <h3 class="ui header">Target javascript Folder</h3>
