Little bump for css

--- a/index.html
+++ b/index.html
@@ -38,24 +38,24 @@
 
           <h3 class="ui header">Source javascript Folder</h3>
 
-          <div class="ui input">
-                <input type="text" class="javascript-src-dir-input">
-          </div>
 
-          <button id="javascript-src-dir-trigger">Select folder</button>
+          <input type="text" class="input javascript-src-dir-input">
+
+
+          <button id="javascript-src-dir-trigger" class="button">Select folder</button>
 
           <input id="javascript-src-dir" type="file"/>
           <hr>
 
           <h3 class="ui header">Target javascript Folder</h3>
 
-          <div class="">
-            <input type="text" class="javascript-trg-dir-input">
-          </div>
 
-          <button id="javascript-trg-dir-trigger">Select folder</button>
+          <input type="text" class="input javascript-trg-dir-input">
 
-          <input id="javascript-trg-dir none" type="file" webkitdirectory/>
+
+          <button id="javascript-trg-dir-trigger" class="button">Select folder</button>
+
+          <input id="javascript-trg-dir" type="file" webkitdirectory/>
 
           <hr>
 
@@ -66,24 +66,23 @@
 
           <h3 class="ui header">Source CSS Folder</h3>
 
-          <div class="ui input">
-            <input type="text" class="css-src-dir-input">
-          </div>
 
-          <button id="css-src-dir-trigger">Select folder</button>
+          <input type="text" class="input css-src-dir-input">
 
-          <input id="css-src-dir none" type="file"/>
+
+          <button id="css-src-dir-trigger" class="button">Select folder</button>
+
+          <input id="css-src-dir" type="file"/>
           <hr>
 
           <h3 class="ui header">Target CSS Folder</h3>
 
-          <div class="">
-            <input type="text" class="css-trg-dir-input">
-          </div>
 
-          <button id="css-trg-dir-trigger">Select folder</button>
+          <input type="text" class="input css-trg-dir-input">
 
-          <input id="css-trg-dir none" type="file" webkitdirectory/>
+          <button id="css-trg-dir-trigger" class="button">Select folder</button>
+
+          <input id="css-trg-dir" type="file" webkitdirectory/>
 
           <hr>
 
@@ -96,24 +95,22 @@
 
           <h3 class="ui header">Source images Folder</h3>
 
-          <div class="ui input">
-            <input type="text" class="images-src-dir-input">
-          </div>
 
-          <button id="images-src-dir-trigger">Select folder</button>
+          <input type="text" class="input images-src-dir-input">
 
-          <input id="images-src-dir none" type="file"/>
+
+          <button id="images-src-dir-trigger" class="button">Select folder</button>
+
+          <input id="images-src-dir" type="file"/>
           <hr>
 
           <h3 class="ui header">Target images Folder</h3>
 
-          <div class="">
-            <input type="text" class="images-trg-dir-input">
-          </div>
+          <input type="text" class="input images-trg-dir-input">
 
-          <button id="images-trg-dir-trigger">Select folder</button>
+          <button id="images-trg-dir-trigger" class="button">Select folder</button>
 
-          <input id="images-trg-dir none" type="file" webkitdirectory/>
+          <input id="images-trg-dir" type="file" webkitdirectory/>
 
           <hr>
 
